aqp_platform/deployments/kubernetes/base/aqp-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqp-ui
  namespace: aqp-ui
  labels:
    app: aqp-ui
    app.kubernetes.io/part-of: aqp
spec:
  type: ClusterIP
  selector:
    app: aqp-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
